# pwsh-mcp

./: .flake8  .gitignore  README.md  pyproject.toml
src/powershell_mcp/: main.py  powershell_server.py  windows_terminal_controller.py
tests/: __init__.py
