[project]
name = "powershell-mcp"
version = "1.0.0"
description = "powershell-mcp"
authors = [
    {name = "maithaen", email = "maithaen@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyautogui",
    "pillow",
    "psutil",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "unittest2>=1.1.0",
    "coverage>=7.2.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]


[project.scripts]
powershell-mcp = "powershell_mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/powershell_mcp"]

[tool.black]
line-length = 128
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 128

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
